Added interface better.

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Server App</title>
-  <script defer src="main.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="/public/styles.css">
 </head>
 <body>
-  <h1>My Server App</h1>
-  <button id="loginBtn">Login with GitHub</button>
-  <button id="logoutBtn" style="display:none;">Logout</button>
-  <div id="message"></div>
-  
+    <div class="container">
+        <div class="logo">
+            <h1>PixelPro Digital</h1>
+        </div>
+        <button id="loginBtn" class="button">Login</button>
+        <button id="logoutBtn" class="button" style="display:none;">Logout</button>
+        <div id="message"></div>
+    </div>
+    <script defer src="/public/main.js"></script>
 </body>
 </html>
