--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -15,6 +15,6 @@
         <button id="logoutBtn" class="button" style="display:none;">Logout</button>
         <div id="message"></div>
     </div>
-    <script defer src="/public/main.js"></script>
+    <script defer src="main.js"></script>
 </body>
 </html>
