Re - Redid the Front end

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <h1>PixelPro Digital</h1>
+            <h1>Mu Origin</h1>
         </div>
         <button id="loginBtn" class="button">Login</button>
         <button id="logoutBtn" class="button" style="display:none;">Logout</button>
